// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses 1`] = `
<h3>
  Viewing 
   
  expenses
   totalling 
  $123.45
</h3>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<h3>
  Viewing 
   
  expenses
   totalling 
  $0.00
</h3>
`;

exports[`should render ExpensesSummary with one expense 1`] = `
<h3>
  Viewing 
   
  expenses
   totalling 
  $1.00
</h3>
`;
